--- a/style.css
+++ b/style.css
@@ -16,7 +16,19 @@ body{
 
 
 }
-
+#cabecera{
+    background: rgb(114, 9, 117);
+    color: rgb(255, 255, 255);
+    font-size: 32px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
+    box-shadow: 4px 10px 30px -1px rgba(0,0,0,0.75);
+}
+#cabecera #tagline{
+    margin: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
 #container h1
 {
     font-size: 20px;
