--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    color: darkgreen;
+    color: rgb(0, 5, 0);
     text-align: center;
     font-family:Arial, Helvetica, sans-serif;
     font-size: 16px;
