--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+    background: rgb(18, 87, 156);
     color: rgb(0, 0, 0);
     text-align: center;
     font-family:Arial, Helvetica, sans-serif;
@@ -13,6 +14,7 @@ body{
     text-align: left;
     border: 1px solid #96989A;
     margin: 0 auto;
+    background: rgb(255, 255, 255);
 
 
 }
@@ -22,7 +24,7 @@ body{
     font-size: 32px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bold;
-    box-shadow: 4px 10px 30px -1px rgba(0,0,0,0.75);
+    box-shadow: 0px 5px 5px -1px rgba(0,0,0,0.75);
 }
 #cabecera #tagline{
     margin: 0 0 0 1em;
@@ -32,4 +34,7 @@ body{
 #container h1
 {
     font-size: 20px;
+}
+#post{
+    background: rgb(172, 162, 162);
 }
