--- a/style.css
+++ b/style.css
@@ -33,3 +33,10 @@ body{
 {
     font-size: 20px;
 }
+#footer{
+    background: rgb(43, 170, 12);
+    text-align: center;
+    padding: 0.5em;
+    font-size: 30px;
+    font-style: italic;
+}
